[package]
name = "auto_array"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0" # MSRV

license = "MIT OR Apache-2.0"
repository = "https://github.com/lars-schumann/auto_array"
# homepage = ""
readme = "README.md"
description = "A macro to automatically calculate the length of arrays"
keywords = ["auto", "array", "const", "macro"]


[dependencies]
